# speaker_test_bench

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/source/: conf.py  index.rst
docs/source/_static/: versions.json
docs/source/_templates/: footer.html
docs/source/api/: index.rst
docs/source/development/: index.rst
docs/source/getting_started/: index.rst
docs/source/user_guide/: basics.rst  howto.rst  index.rst
docs/source/whatsnew/: index.rst  v0.0.0.rst
src/speaker_test_bench/: __init__.py  version.py
src/speaker_test_bench/features/: __init__.py  ad5693.py
