[aliases]
test = pytest

[metadata]
name = speaker_test_bench
version = attr: speaker_test_bench.version.version
author = Aurelien Goyot
author_email = aurelien.goyot@gmail.com
description = This package contain code to run test protocol for testing speaker
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = Proprietary
license_files = LICENSE
keywords = analytics, machine learning
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Framework :: Setuptools Plugin
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages_dir = "", src
packages=find:
python_requires = >=3.9, <4
include_package_data = True
install_requires =
    arrow~=1.2.3
    python-dateutil~=2.8.2
    numpy~=1.23.0
    pandas~=1.5.0

[options.packages.find]
where=src

;[options.extras_require]
;test =
;    pytest
;    coverage
;
